--- a/project-4/DigitalClock.html
+++ b/project-4/DigitalClock.html
@@ -27,10 +27,31 @@
                 <span class="lin">|</span>
                 <p> set wakeup time </p>
                 <select class="opt">
-                    <option>8AM-9AM</option>
-                    <option>9AM-10AM</option>
-                    <option>10AM-11AM</option>
-                    <option>11AM-12AM</option> 
+                   <option>Select Time</option>
+                    <option>12AM - 1AM</option>
+                    <option>1AM -  2AM</option>
+                    <option>2AM -  3AM</option>
+                    <option>3AM -  4AM</option>
+                    <option>4AM -  5AM</option>
+                    <option>5AM -  6AM</option>
+                    <option>6AM -  7AM</option>
+                    <option>7AM -  8AM</option>
+                    <option>8AM -  9AM</option>
+                    <option>9AM -  10AM</option>
+                    <option>10AM - 11AM</option>
+                    <option>11AM - 12AM</option> 
+                    <option>12AM - 1PM</option>
+                    <option>1PM -  2PM</option>
+                    <option>2PM -  3PM</option>
+                    <option>3PM -  4PM</option>
+                    <option>4PM -  5PM</option>
+                    <option>5PM -  6PM</option>
+                    <option>6PM -  7PM</option>
+                    <option>7PM -  8PM</option>
+                    <option>8PM -  9PM</option>
+                    <option>9PM -  10PM</option>
+                    <option>10PM - 11PM</option>
+                    <option>11PM - 12AM</option>
                 </select>
             </div>
             <div class="lunch">
@@ -38,10 +59,31 @@
                 <span class="lin">|</span>
                 <p>set lunch time</p>
                 <select class="opt">
-                    <option>12AM-1PM</option>
-                    <option>1PM-2PM</option>
-                    <option>2PM-3PM</option>
-                    <option>3PM-4PM</option> 
+                    <option>Select Time</option>
+                    <option>12AM - 1AM</option>
+                    <option>1AM -  2AM</option>
+                    <option>2AM -  3AM</option>
+                    <option>3AM -  4AM</option>
+                    <option>4AM -  5AM</option>
+                    <option>5AM -  6AM</option>
+                    <option>6AM -  7AM</option>
+                    <option>7AM -  8AM</option>
+                    <option>8AM -  9AM</option>
+                    <option>9AM -  10AM</option>
+                    <option>10AM - 11AM</option>
+                    <option>11AM - 12AM</option> 
+                    <option>12AM - 1PM</option>
+                    <option>1PM -  2PM</option>
+                    <option>2PM -  3PM</option>
+                    <option>3PM -  4PM</option>
+                    <option>4PM -  5PM</option>
+                    <option>5PM -  6PM</option>
+                    <option>6PM -  7PM</option>
+                    <option>7PM -  8PM</option>
+                    <option>8PM -  9PM</option>
+                    <option>9PM -  10PM</option>
+                    <option>10PM - 11PM</option>
+                    <option>11PM - 12AM</option>
                 </select>
             </div>
             <div class="nap">
@@ -49,20 +91,62 @@
                 <span class="lin">|</span>
                 <p>set nap time</p>
                 <select class="opt">
-                    <option>4PM-5PM</option>
-                    <option>5PM-6PM</option>
-                    <option>6PM-7PM</option>
-                    <option>7PM-8PM</option> 
+                    <option>Select Time</option>
+                    <option>12AM - 1AM</option>
+                    <option>1AM -  2AM</option>
+                    <option>2AM -  3AM</option>
+                    <option>3AM -  4AM</option>
+                    <option>4AM -  5AM</option>
+                    <option>5AM -  6AM</option>
+                    <option>6AM -  7AM</option>
+                    <option>7AM -  8AM</option>
+                    <option>8AM -  9AM</option>
+                    <option>9AM -  10AM</option>
+                    <option>10AM - 11AM</option>
+                    <option>11AM - 12AM</option> 
+                    <option>12AM - 1PM</option>
+                    <option>1PM -  2PM</option>
+                    <option>2PM -  3PM</option>
+                    <option>3PM -  4PM</option>
+                    <option>4PM -  5PM</option>
+                    <option>5PM -  6PM</option>
+                    <option>6PM -  7PM</option>
+                    <option>7PM -  8PM</option>
+                    <option>8PM -  9PM</option>
+                    <option>9PM -  10PM</option>
+                    <option>10PM - 11PM</option>
+                    <option>11PM - 12AM</option>
                 </select>
             </div>
             <div class="night">
                 <i class="fa-solid fa-cloud-moon"></i>
                 <p>set night time</p>
                 <select class="opt">
-                    <option>8PM-9PM</option>
-                    <option>9PM-10PM</option>
-                    <option>10PM-11PM</option>
-                    <option>11PM-11PM</option> 
+                   <option>Select Time</option>
+                    <option>12AM - 1AM</option>
+                    <option>1AM -  2AM</option>
+                    <option>2AM -  3AM</option>
+                    <option>3AM -  4AM</option>
+                    <option>4AM -  5AM</option>
+                    <option>5AM -  6AM</option>
+                    <option>6AM -  7AM</option>
+                    <option>7AM -  8AM</option>
+                    <option>8AM -  9AM</option>
+                    <option>9AM -  10AM</option>
+                    <option>10AM - 11AM</option>
+                    <option>11AM - 12AM</option> 
+                    <option>12AM - 1PM</option>
+                    <option>1PM -  2PM</option>
+                    <option>2PM -  3PM</option>
+                    <option>3PM -  4PM</option>
+                    <option>4PM -  5PM</option>
+                    <option>5PM -  6PM</option>
+                    <option>6PM -  7PM</option>
+                    <option>7PM -  8PM</option>
+                    <option>8PM -  9PM</option>
+                    <option>9PM -  10PM</option>
+                    <option>10PM - 11PM</option>
+                    <option>11PM - 12AM</option>
                 </select>
             </div>
             
