--- a/project-5/darktodo.html
+++ b/project-5/darktodo.html
@@ -31,7 +31,7 @@
 
         <div class="addList">
             <a href="#" id="alist"><i class="fa-solid fa-circle-plus" onclick="addpopup()"></i></a>
-            <label class="l" style="color: white;">Add List</label>
+            <label class="l show-data" data-show="click on the add icon to add lists" style="color: white;">Add List</label>
         </div>
         
         <div class="items">
