--- a/project-5/todoList.html
+++ b/project-5/todoList.html
@@ -25,7 +25,7 @@
 
         <div class="addList">
             <a href="#" id="alist"><i class="fa-solid fa-circle-plus" onclick="addpopup()"></i></a>
-            <label class="l">Add List</label>
+            <label class="l show-data" data-show="click on the add icon to add lists">Add List</label>
         </div>
         
         <div class="items">
